fix politica y gestion mobile

--- a/componentes/politica-gestion.css
+++ b/componentes/politica-gestion.css
@@ -77,8 +77,8 @@
     position: static;
     border-bottom: none;
   }
-  .linea-izquierda-mobile-coordinacion-financiera {
-    width: 33%;
+  .linea-izquierda-mobile-politica-gestion {
+    width: 51%;
   }
   .linea-izquierda-mobile {
     position: relative;
